# Aster

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  world.cpp  world.h
dependency/glfw/: glfw3.lib
dependency/imgui/: CMakeLists.txt
dependency/ktx/lib/: ktx.lib
dependency/tinyobjloader/: tiny_obj_loader.h
renderer/: renderer.cpp  renderer.h
shaders/: compile.bat
src/: Shader.h  buffer.h  core.cpp  descriptorsetstorage.cpp  descriptorsetstorage.h  fileutils.h  framebufferstorage.cpp  framegraph.cpp  framegraph.h  image.h  main.cpp  pipelinestorage.cpp  pipelinestorage.h  renderpassstorage.cpp  shader.cpp  uniformscontext.cpp  uniformscontext.h  vertexinputdeclaration.cpp  vertexinputdeclaration.h
src/application/: camera.cpp  level.cpp  level.h  main.cpp
src/application/Aster/: CMakeLists.txt  camera.h  level.cpp  level.h  main.cpp
src/application/examples/: CMakeLists.txt  app_base.cpp  app_base.h  main.cpp
src/application/examples/construct_sphere/: readme.md  sphere_app.cpp  sphere_app.h
src/application/mesh_editor/: CMakeLists.txt  application.cpp  application.h  camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h
src/application/mesh_editor/mesh/: halfedge_mesh.cpp  halfedge_mesh.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/engine/assets/: asset_storage.cpp  asset_storage.h
src/engine/components/: camera_component.cpp  camera_component.h  root_component.h  sky_box_component.h  static_mesh_component.h  transform.cpp  transform.h
src/engine/input/: input_handler.cpp  input_handler.h
src/engine/math/: math.cpp  math.h
src/engine/rendering/: imgui_backend.cpp  imgui_backend.h  renderer.cpp  renderer.h
src/engine/rendering/components/: camera_component.cpp  static_mesh_component.h
src/engine/rendering/vulkan/: Shader.h  buffer.cpp  buffer.h  common.h  core.cpp  core.h  enums.h  fileutils.h  framebuffer_storage.cpp  framebuffer_storage.h  framecontext.cpp  framecontext.h  framegraph.cpp  framegraph.h  image.h  pipeline.cpp  pipeline.h  pipeline_storage.cpp  pipeline_storage.h  pipelinestorage.h  renderpass_storage.cpp  renderpass_storage.h  renderpassstorage.cpp  shader.cpp  shader.h  shader_parsing.cpp  shader_parsing.h  swapchain.h  uniforms_accessor.cpp  uniforms_accessor.h  uniforms_accessor_storage.cpp  uniforms_accessor_storage.h  uniformsaccessor.cpp  uniformsaccessorstorage.h  vertex.h  vertex_input_declaration.cpp  vertex_input_declaration.h
src/engine/utils/: center_pointed_camera.cpp  center_pointed_camera.h  mesh_generation.cpp  mesh_generation.h  utils.cpp  utils.h
src/rendering/vulkan/: FramebufferStorage.h  Shader.h  core.cpp  core.h  enums.h  framecontext.h  framegraph.cpp  framegraph.h  pipeline.cpp  pipeline.h  pipelinestorage.cpp  pipelinestorage.h  renderpassstorage.h  shader.cpp  shaderparsing.cpp  shaderparsing.h  swapchain.h  uniformsaccessorstorage.cpp  uniformscontextstorage.cpp  uniformscontextstorage.h
tests/shader_parsing/: CMakeLists.txt  main.cpp
tests/shaderparsing/: main.cpp
